@@ -255,14 +255,15 @@ public class PlayerListener implements Listener {
                 return;
         }
 
-        Item drop = event.getItemDrop();
-        ItemStack dropStack = drop.getItemStack();
 
-        if (ItemUtils.isSharable(dropStack)) {
-            drop.setMetadata(MetadataConstants.METADATA_KEY_TRACKED_ITEM, MetadataConstants.MCMMO_METADATA_VALUE);
-        }
+        // TODO: This sharing item system seems very unoptimized, temporarily disabling
+        /*if (ItemUtils.isSharable(event.getItemDrop().getItemStack())) {
+            event.getItemDrop().getItemStack().setMetadata(
+                    MetadataConstants.METADATA_KEY_TRACKED_ITEM,
+                    MetadataConstants.MCMMO_METADATA_VALUE);
+        }*/
 
-        SkillUtils.removeAbilityBuff(dropStack);
+        SkillUtils.removeAbilityBuff(event.getItemDrop().getItemStack());
     }
 
     /**
@@ -494,8 +495,7 @@ public class PlayerListener implements Listener {
                 return;
             }
 
-            Item drop = event.getItem();
-            ItemStack dropStack = drop.getItemStack();
+            final Item drop = event.getItem();
 
             //Remove tracking
             if (drop.hasMetadata(MetadataConstants.METADATA_KEY_TRACKED_ARROW)) {
@@ -510,13 +510,14 @@ public class PlayerListener implements Listener {
                 return;
             }
 
-            if (!drop.hasMetadata(MetadataConstants.METADATA_KEY_TRACKED_ITEM) && mcMMOPlayer.inParty() && ItemUtils.isSharable(dropStack)) {
+            // TODO: Temporarily disabling sharing items...
+            /*if (!drop.hasMetadata(MetadataConstants.METADATA_KEY_TRACKED_ITEM) && mcMMOPlayer.inParty() && ItemUtils.isSharable(dropStack)) {
                 event.setCancelled(ShareHandler.handleItemShare(drop, mcMMOPlayer));
 
                 if (event.isCancelled()) {
                     SoundManager.sendSound(player, player.getLocation(), SoundType.POP);
                 }
-            }
+            }*/
 
             /*if (player.getInventory().getItemInMainHand().getType() == Material.AIR) {
                 Unarmed.handleItemPickup(player, event);
