@@ -7,7 +7,11 @@ Version 2.2.029
     Added Stripped_Pale_Oak_Wood to experience.yml for Woodcutting
     Added Bonus_Drops.Woodcutting.Pale_Oak_Wood to config.yml to enable double/triple drops for Pale Oak Wood
     Added Bonus_Drops.Woodcutting.Pale_Oak_Log to config.yml to enable double/triple drops for Pale Oak Log
+    Temporarily disabled the party item share functionality until it is fixed or potentially removed (see notes)
 
+    Notes:
+    I noticed some issues with the party item share feature, so I've temporarily disabled it until those issues are addressed.
+    I'm not even sure people like or dislike this feature, I'm personally not a fan.. I'd like to hear what you guys think.
 
 Version 2.2.028
     Fixed stack overflow during ChunkUnloadEvent
